--- a/Landings/index.html
+++ b/Landings/index.html
@@ -19,13 +19,13 @@
     <header>
         <a href="#" class="logo"> 
             <img src="../image/logo.png" alt="logo tienda">
-            <h2 class="nombre-tienda">Pixels Mint</h2>
+            <h2 class="nombre-tienda"><img src="../img/fondopixel2.png" alt=""></h2>
          </a>
    <nav> 
         <a href="index.html" class="nav-link">Inicio</a>
        <a href="productos.html" class="nav-link">Productos</a>
        
-       <a href="" class="nav-link">Contacto</a>
+       <a href="Contacto.html" class="nav-link">Contacto</a>
        <a href="" class="nav-link">Carrito de compras</a>
    
        </header>
