imagenes menu principal

--- a/Landings/index.html
+++ b/Landings/index.html
@@ -37,7 +37,14 @@
 <p>Somos un emprendimiento de hamma beads contamos con un amplio catalogo de llaveros y aros ademas contamos con el servicio personalizado del pedido que deseen contamos tambien con peluches amigurumis a pedido o del catalogo</p>
 
     </div>
+<div class="fotosportada"><img src="../img/portadafoto.png" alt=""> 
+    <img src="../img/portadafoto2.png" alt="">
+    <img src="../img/fondofoto3.png" alt="">
 
+    
+
+
+</div>
    
 </body>
 </html>
