--- a/Landings/index.html
+++ b/Landings/index.html
@@ -24,7 +24,7 @@
    <nav> 
         <a href="index.html" class="nav-link">Inicio</a>
        <a href="productos.html" class="nav-link">Productos</a>
-       
+       <a href="iniciarsesion.html" class="nav-link">Iniciar sesion</a>
        <a href="Contacto.html" class="nav-link">Contacto</a>
        <a href="" class="nav-link">Carrito de compras</a>
    
@@ -36,6 +36,11 @@
 <h2>Pixels mint</h2>
 <p>Somos un emprendimiento de hamma beads contamos con un amplio catalogo de llaveros y aros ademas contamos con el servicio personalizado del pedido que deseen contamos tambien con peluches amigurumis a pedido o del catalogo</p>
 
+<h2>Metodos de envios</h2>
+<p>Actualmente contamos con envios a domicilio mediante starken de lunes a viernes de 9:00 a 18:00 y los sabados a domingos de 9:00 a 14:00 h y ademas el producto puede ser retirado en la estacion de metro san pablo</p>
+
+<h2>Promociones y descuentos</h2>
+<p>En nuestra seccion de promociones de esta semana por la compra de 3 llaveros te puedes llevar uno gratis a eleccion, ademas por comprar consigues un cupon de 20% para tus proximas compras</p>
     </div>
 <div class="fotosportada"><img src="../img/portadafoto.png" alt=""> 
     <img src="../img/portadafoto2.png" alt="">
