--- a/Landings/iniciarsesion.html
+++ b/Landings/iniciarsesion.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="#" class="logo"> 
-            <img src="../image/logo.png" alt="logo tienda">
+            <img src="../img/logo.png" alt="logo tienda">
             <h2 class="nombre-tienda"><img src="../img/fondopixel2.png" alt=""></h2>
             <h1>Iniciar sesion</h1>
          </a>
