--- a/Landings/Menuadmin.html
+++ b/Landings/Menuadmin.html
@@ -18,7 +18,7 @@
         <a href="#" class="logo"> 
             <img src="../img/logo.png" alt="logo tienda">
             <h2 class="nombre-tienda"><img src="../img/fondopixel2.png" alt=""></h2>
-            <h1>Carrito de compras</h1>
+            <h1>Administracion</h1>
          </a>
    <nav> 
     <a href="index.html" class="nav-link">Inicio <i class="fa-solid fa-house"></i></a>
@@ -29,36 +29,20 @@
     <a href="CarritoCompras.html" class="nav-link">Carrito de compras  <i class="fa-solid fa-cart-shopping"></i></a>
    
        </header>
-       <div class="fondo6">
+       <div class="fondo7">
        <header3>
-        <h1>Carrito de compras</h1>
+        <h1>Menu Administrativo</h1>
        </header3>
+
        <section class="Contenedor5">
-<div class="contenedor-items">
-<div class="item"></div>
-<span class="titulo-item">Buho de harry potter</span>
-<img src="../img/llavero1.jpeg" alt="img-item">
-<span class="precio-item">$2.000</span>
-<button class="boton-item">-</button><button>1 <i class="fa-solid fa-bag-shopping"></i></button><button>+</button>
+      
+        <button>Usuarios registrados <i class="fa-solid fa-user"></i></button> <p>Ver cantidad de usarios registrados en la plataforma</p>
+        <button>Cantidad de productos en bodega <i class="fa-sharp fa-solid fa-cart-flatbed-suitcase"></i></button> <p>Inventario de los productos restantes</p>
 
-<div class="item"></div>
-<span class="titulo-item">Pikachu de pokemon</span>
-<img src="../img/llavero2.jpeg" alt="img-item">
-<span class="precio-item">$2.500</span>
-<button class="boton-item">-</button><button>1 <i class="fa-solid fa-bag-shopping"></i></button><button>+</button>
-<div class="item"></div>
-<span class="titulo-item">Bulbasaur de pokemon</span>
-<img src="../img/llavero3.jpeg" alt="img-item">
-<span class="precio-item">$2.500</span>
-<button class="boton-item">-</button><button>1 <i class="fa-solid fa-bag-shopping"></i></button><button>+</button>
+        <button>Pedidos por enviar <i class="fa-solid fa-truck"></i></button> <p>Pedidos pendientes por enviar</p>
+        <button>Reclamos <i class="fa-solid fa-envelope"></i></button><p>Consultas y Reclamos</p>
+        <button>Pedidos Enviados <i class="fa-solid fa-truck"></i></button> <p>Pedidos ya entregados a los clientes</p>
+        <button>Devoluciones <i class="fa-solid fa-sack-dollar"></i></button> <p>Solicitud de devolucion de dinero o cambio del producto</p>
+               </section>
 
-
-<div>
-
-    <span class="precio-total">Su total es $7.000</span>
-<button>Pagar <i class="fa-sharp fa-solid fa-cash-register"></i></button>
-       </section>
-       
-    </div>
-</body>
-</html>
+       <body>
