--- a/Landings/iniciarsesion.html
+++ b/Landings/iniciarsesion.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../css/estilos.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
-  <script src="Funciones.js"></script>
+  <script src="../Funciones/Funciones.js"></script>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 
 
         <div class="contenedor1">
-
+          <form action="Menuadmin.html">
     <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header text-center">
@@ -41,20 +41,20 @@
       <div class="modal-body mx-3">
         <div class="md-form mb-5">
           <i class="fas fa-envelope prefix grey-text"></i>
-          <input type="email" id="defaultForm-email" class="form-control validate">
+          <input required type="email" id="defaultForm-email" class="form-control validate">
           <label data-error="wrong" data-success="right" for="defaultForm-email">Email</label>
         </div>
     
         <div class="md-form mb-4">
           <i class="fas fa-lock prefix grey-text"></i>
-          <input type="password" id="defaultForm-pass" class="form-control validate">
+          <input required type="password" id="defaultForm-pass" class="form-control validate">
           <label data-error="wrong" data-success="right" for="defaultForm-pass">Contraseña</label>
         </div>
     
       </div>
       <div class="modal-footer d-flex justify-content-center">
-        <button class="btn-login">Iniciar sesion</button>
-        <button class="btn-login">Registrar</button>
+        <button type="submit"   class="btn-login">Iniciar sesion</button>
+        <button type="menu" class="btn-login">Registrar</button>
       </div>
     </div>
 
