--- a/Landings/Crearcuenta.html
+++ b/Landings/Crearcuenta.html
@@ -28,7 +28,7 @@
    
        </header>
        <div class="fondo4"> 
-
+        <form action="index.html">
 
         <div class="container">
           <form action="Landings/Exito.html">
@@ -61,6 +61,8 @@
               <br />
 
               <div>Direccion de despacho: <input type="text" id="direccion"  /></div>
+              <br>
+              <div>Numero celular: <input type="phone" id="Numero" onchange="validatePhoneNumber()"  /></div>
             </div>
             <div>
             </div> <br></div>
