--- a/Landings/index.html
+++ b/Landings/index.html
@@ -27,6 +27,7 @@
    <nav> 
         <a href="index.html" class="nav-link"><i class="fa-solid fa-house"></i> Inicio </a>
        <a href="productos.html" class="nav-link"><i class="fa-solid fa-bag-shopping"></i> Productos </a>
+       <a href="Crearcuenta.html" class="nav-link"><i class="fa-solid fa-user"></i> Crear cuenta  </a>
        <a href="iniciarsesion.html" class="nav-link"><i class="fa-solid fa-address-card"></i> Iniciar sesion </a>
        <a href="EditarPerfil.html" class="nav-link"><i class="fa-solid fa-user"></i> Editar perfil </a>
        <a href="Contacto.html" class="nav-link"><i class="fa-solid fa-phone"></i> Contacto </a>
